<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.maxqiu.demo</groupId>
    <artifactId>demo-SpringBoot2</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>17</java.version>
    </properties>

    <modules>
        <module>custom-spring-boot-starter</module>
        <module>demo-SpringBoot-Cache</module>
        <module>demo-SpringBoot-DistributedLock</module>
        <module>demo-SpringBoot-Druid</module>
        <module>demo-SpringBoot-DynamicDatasource</module>
        <module>demo-SpringBoot-Elasticsearch</module>
        <module>demo-SpringBoot-HikariCP</module>
        <module>demo-SpringBoot-JPA</module>
        <module>demo-SpringBoot-JUnit5</module>
        <module>demo-SpringBoot-Log</module>
        <module>demo-SpringBoot-Mail</module>
        <module>demo-SpringBoot-MybatisPlus</module>
        <module>demo-SpringBoot-RabbitMQ</module>
        <module>demo-SpringBoot-Redis</module>
        <module>demo-SpringBoot-Retry</module>
        <module>demo-SpringBoot-ShardingSphereJdbc</module>
        <module>demo-SpringBoot-Shiro</module>
        <module>demo-SpringBoot-SpringMVC</module>
        <module>demo-SpringBoot-SpringSecurity</module>
        <module>demo-SpringBoot-SpringSession</module>
        <module>demo-SpringBoot-Transactional</module>
        <module>demo-SpringBoot-Validation</module>
        <module>demo-SpringBoot-WeixinPay</module>
    </modules>

    <dependencies>
        <!-- starter -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- MybatisPlus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>3.5.2</version>
            </dependency>
            <!-- fastjson2 -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>2.0.20</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2-extension</artifactId>
                <version>2.0.20</version>
            </dependency>
            <!-- Hutool -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>5.8.10</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- 指定 jdk 版本 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!-- maven 打包时跳过测试 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
